bin/tests/snapshots/enable_first__291019f48c74361ada12038b298b907a_lint_stderr.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enable = true;
  nssmdns4 = true;
}
---
[enable_blank_line] Warning: No blank line after `enable`
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │   enable = true;
   │   ───────┬──────  
   │          ╰──────── a blank line should separate this from what follows
───╯
