bin/tests/snapshots/enable_first__3b8d78cc569ea74439c584ff8f98c3b1_fix.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enableCompletion = true;
  enable = true;
}
---
