bin/tests/snapshots/enable_first__3b8d78cc569ea74439c584ff8f98c3b1_lint_stderr.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  enableCompletion = true;
  enable = true;
}
---
[enable_first] Warning: `enable` is not the first attribute
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   enable = true;
   │   ───────┬──────  
   │          ╰──────── enable should be the first attribute in this set
───╯
