bin/tests/snapshots/enable_first__4ec43d81a28dc0fa9c3fd167e0a01031_fix.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  openFirewall = true;
  enable = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
 {
+  enable = true;
   nssmdns4 = true;
   openFirewall = true;
-  enable = true;
 }
