bin/tests/snapshots/enable_first__4ec43d81a28dc0fa9c3fd167e0a01031_lint_errfmt.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  openFirewall = true;
  enable = true;
}
---
<temp_file_path>>4:3:W:30:[enable_first] `enable` should be the first attribute in this set
