bin/tests/snapshots/enable_first__4ec43d81a28dc0fa9c3fd167e0a01031_lint_json.snap
---
source: bin/tests/enable_first.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  openFirewall = true;
  enable = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "enable_first",
      "note": "`enable` is not the first attribute",
      "code": 30,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 17
            }
          },
          "message": "`enable` should be the first attribute in this set",
          "suggestion": null
        }
      ]
    }
  ]
}
